renamed and fixed main route

--- a/members/templates/members.html
+++ b/members/templates/members.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "layout.html" %}
 {% block title %}
   My Tennis Club - List of all members
 {% endblock title %}
