--- a/members/templates/details.html
+++ b/members/templates/details.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "layout.html" %}
 {% block title %}
   Details about {{ mymember.firstname }} {{ mymember.lastname }}
 {% endblock title %}
